--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Sanketh: ignore DMF results directory
-src/dmf/results/*
-
+# extras 
+.DS_Store
+examples/.DS_Store
+examples/figures/.DS_Store 
+examples/__pycache__
