--- a/setup.cfg
+++ b/setup.cfg
@@ -77,7 +77,7 @@ all =
 
 [tool:pytest]
 addopts =
-    --cov delta_score --cov-report term-missing
+    #--cov delta_score --cov-report term-missing
     --verbose
 norecursedirs =
     dist
